<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/what_was_the_fault"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/vE_srl_entered_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:minHeight="80dp"
        android:layout_margin="8dp"
        android:inputType="textMultiLine"
        android:hint="@string/enter_reason_here"
        android:background="@drawable/rectangular_edit_text"
        android:padding="8dp"
       >


    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_gravity="end">
        <TextView
            android:id="@+id/vT_srl_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="26dp"
            android:text="@string/cancel"/>
        <TextView
            android:id="@+id/vT_srl_ok"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/submit"/>

    </LinearLayout>


</LinearLayout>