<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vL_ipaddress_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="56dp"
    android:layout_marginBottom="56dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/vE_ipaddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/enter_ip_address"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:textColorHint="@color/dark_gray" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vT_ipaddress_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="26dp"
            android:text="@string/cancel"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/vT_ipaddress_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="16dp"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
