<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/vL_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
       android:layout_marginBottom="56dp"
       android:layout_gravity="center"
        android:orientation="vertical"
       >

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="36dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">
            <EditText
                android:id="@+id/vE_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/enter_password"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:textColorHint="@color/dark_gray" />

        </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vT_password_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="26dp"
                android:text="@string/cancel"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/vT_password_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>