<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.QuarantineEntryActivity"
    android:id="@+id/vL_am_root_layout">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:src="@drawable/bosch_logo"
        android:contentDescription="@string/todo" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/fifo"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/vT_ale_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                android:text="@string/digital"
                android:textColor="@color/colorAccent"
                android:textSize="36sp" />
            <TextView
                android:id="@+id/vT_ale_versionname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="@color/purple"/>

        </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/vC_ale_kanbanin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/scan_selection"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/in_button"
                android:tint="@color/colorPrimaryDark"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="56dp"
                android:text="@string/loms_in"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/vC_ale_kanbanout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/scan_selection"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="56dp"
                android:gravity="center"
                android:text="@string/loms_out"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:src="@drawable/use_128p"
                android:tint="@color/colorPrimaryDark"
                android:contentDescription="@string/todo" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/vP_ale_progressbar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="bottom|center"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="26dp"
        android:layout_gravity="bottom|start"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/vL_ale_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:tint="@color/white"
                android:src="@drawable/logout"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"
                android:padding="4dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/logout"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>