<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="66dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/white"
        android:nestedScrollingEnabled="true"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="8dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:text="@string/line"/>
                    <TextView
                        android:id="@+id/vT_am_line_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:text=""/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:text="@string/station"/>

                    <TextView
                        android:id="@+id/vT_am_station_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:text=""/>


                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">
               <!-- <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Scanned Text : "
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>-->
                <TextView
                    android:id="@+id/vT_am_result_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_barcode_captured"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:freezesText="true"
                    />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/vL_al_scan_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="22dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/scan_selection"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/qr_code_scan"
                    android:tint="@color/colorPrimary"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:text="@string/scan_qr_code"/>
               <!-- <Button
                    android:id="@+id/btn_success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:paddingStart="26dp"
                    android:paddingEnd="26dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_marginTop="8dp"
                    android:text="Scan QR code"/>-->
            </LinearLayout>



        </LinearLayout>

        <ProgressBar
            android:id="@+id/vP_am_progressbar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom|center"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/vL_am_success_layout"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:background="@null"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_marginTop="16dp"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:tint="@color/green"
                android:src="@drawable/success"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/vT_am_success_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/success" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vL_am_failure_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_marginTop="16dp"
                android:id="@+id/custom_toast_image"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/error"
                android:tint="@color/error_red"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/vT_am_failure_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/error_red"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/failure" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"/>


    </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_gravity="bottom|start"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/vL_am_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:tint="@color/white"
                    android:src="@drawable/logout"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/logout"/>
            </LinearLayout>

        </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
