<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="10dp">

    <ImageView
        android:id="@+id/vI_sor_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:tint="@color/error_red"
        android:src="@drawable/ic_clear_black_24dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:text="Please select one"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:minHeight="42dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:id="@+id/vL_sor_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:tint="@color/white"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/return_to_production"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:text="@string/return_kanban"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:shadowColor="@color/colorAccent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vL_sor_scrap"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/error_red"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/white"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/scrap"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/scrap"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center"
                android:textSize="18sp"
                android:background="@color/error_red"
                android:textColor="@color/white" />
        </LinearLayout>



    </LinearLayout>


</LinearLayout>